--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -103,6 +103,20 @@ steps:
         - exit_status: '-1'
           limit: 3
 
+  - command: .buildkite/scripts/steps/checks/api_contracts.sh
+    label: 'Check API Contracts'
+    agents:
+      machineType: n2-standard-2
+      preemptible: true
+      spotZones: us-central1-f,us-central1-c,us-central1-a
+    key: check_api_contracts
+    depends_on: check_oas_snapshot
+    timeout_in_minutes: 30
+    retry:
+      automatic:
+        - exit_status: '-1'
+          limit: 3
+
   - command: .buildkite/scripts/steps/typecheck/check_types.sh
     label: 'Check Types'
     agents:
