--- a/.buildkite/pipelines/on_merge.yml
+++ b/.buildkite/pipelines/on_merge.yml
@@ -36,9 +36,11 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: n2-standard-8
+      machineType: n4d-standard-16
+      diskType: hyperdisk-balanced
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
+      diskSizeGb: 200
     key: build
     timeout_in_minutes: 60
     retry:
@@ -52,10 +54,11 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: n2-highcpu-8
+      machineType: n4d-standard-8
+      diskType: hyperdisk-balanced
       preemptible: true
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -116,10 +119,10 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: c4-standard-4
+      machineType: n4d-standard-4
       diskType: hyperdisk-balanced
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     timeout_in_minutes: 60
     retry:
