--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -22,9 +22,10 @@ steps:
   - command: .buildkite/scripts/steps/build_kibana.sh
     label: Build Kibana Distribution
     agents:
-      machineType: n2-standard-8
+      machineType: n4d-standard-16
+      diskType: hyperdisk-balanced
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 200
     key: build
     if: "build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''"
@@ -37,9 +38,10 @@ steps:
   - command: .buildkite/scripts/steps/quick_checks.sh
     label: 'Quick Checks'
     agents:
-      machineType: n2-highcpu-8
+      machineType: n4d-standard-8
+      diskType: hyperdisk-balanced
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     key: quick_checks
     timeout_in_minutes: 60
@@ -106,10 +108,10 @@ steps:
   - command: .buildkite/scripts/steps/typecheck/check_types.sh
     label: 'Check Types'
     agents:
-      machineType: c4-standard-4
+      machineType: n4d-standard-4
       diskType: hyperdisk-balanced
       preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
     key: check_types
     timeout_in_minutes: 60
