--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "**/@types/prop-types": "15.7.5",
     "**/@typescript-eslint/utils": "8.46.3",
     "**/baseline-browser-mapping": "2.9.14",
+    "**/cheerio": "1.0.0-rc.12",
     "**/chokidar": "3.5.3",
     "**/d3-scale/**/d3-color": "npm:@elastic/kibana-d3-color@2.0.1",
     "**/fast-xml-parser": "5.3.4",
@@ -1298,7 +1299,7 @@
     "canvas-confetti": "1.9.4",
     "canvg": "3.0.11",
     "chalk": "4.1.2",
-    "cheerio": "1.2.0",
+    "cheerio": "1.0.0-rc.12",
     "chroma-js": "2.4.2",
     "chrome-remote-interface": "0.33.3",
     "classnames": "2.5.1",
