--- a/package.json
+++ b/package.json
@@ -1505,7 +1505,8 @@
     "yauzl": "3.2.0",
     "yazl": "3.3.1",
     "zod": "3.25.76",
-    "zod-to-json-schema": "3.25.0"
+    "zod-to-json-schema": "3.25.0",
+    "zodv4": "npm:zod@4.1"
   },
   "devDependencies": {
     "@apidevtools/swagger-parser": "12.1.0",
