--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2567,7 +2567,7 @@
       "@typescript-eslint/parser": ["typings/@typescript-eslint/parser"],
       "@a2a-js/sdk/server": ["typings/@a2a-js-sdk/server"],
       "zod": ["typings/zod/v3"],
-      "zod/v4": ["typings/zod/v4"],
+      "zodv4": ["node_modules/zodv4"],
       "vega-lite": ["typings/vega/vega_lite"],
       "vega-tooltip": ["typings/vega/vega_tooltip"]
     },
