Address review comments

--- a/x-pack/platform/plugins/shared/data_sources/server/sources/google_drive/workflows/search.yaml
+++ b/x-pack/platform/plugins/shared/data_sources/server/sources/google_drive/workflows/search.yaml
@@ -8,7 +8,7 @@ triggers:
 inputs:
   - name: query
     type: string
-    description: "Google Drive query. Use fullText contains 'term' for content search, name contains 'term' for filename, mimeType='application/pdf' for type filtering, modifiedTime > '2024-01-01' for date filtering. Combine with 'and'/'or'."
+    description: "Google Drive search query. Examples: name contains 'budget' and trashed=false | fullText contains 'quarterly report' and mimeType='application/pdf' | 'me' in owners and modifiedTime > '2024-01-01' | mimeType='application/vnd.google-apps.folder' and trashed=false. Operators: contains, =, !=, <, >, <=, >=. Combine with 'and'/'or'. String values use single quotes. Add 'and trashed=false' to exclude trashed files."
   - name: pageSize
     type: number
     required: false
@@ -17,6 +17,10 @@ inputs:
     type: string
     required: false
     description: "Pagination token. Pass the 'nextPageToken' value from a previous response to get the next page. When nextPageToken is absent in the response, there are no more results."
+  - name: orderBy
+    type: string
+    required: false
+    description: "Sort order: 'createdTime', 'createdTime desc', 'modifiedTime', 'modifiedTime desc', 'name', or 'name desc'"
 steps:
   - name: search_files
     type: google_drive.searchFiles
@@ -25,3 +29,4 @@ steps:
       query: "${{inputs.query}}"
       pageSize: ${{inputs.pageSize}}
       pageToken: "${{inputs.pageToken}}"
+      orderBy: "${{inputs.orderBy}}"
