--- a/renovate.json
+++ b/renovate.json
@@ -2449,8 +2449,7 @@
       "groupName": "workplace_ai gen-ai dependencies",
       "matchDepNames": [
         "@a2a-js/sdk",
-        "@modelcontextprotocol/sdk",
-        "@n8n/json-schema-to-zod"
+        "@modelcontextprotocol/sdk"
       ],
       "reviewers": [
         "team:search-kibana"
@@ -4679,8 +4678,7 @@
         "@types/express",
         "express",
         "swagger-jsdoc",
-        "swagger-ui-express",
-        "zod-to-json-schema"
+        "swagger-ui-express"
       ],
       "reviewers": [
         "team:obs-entities"
