--- a/docs/reference/toc.yml
+++ b/docs/reference/toc.yml
@@ -45,6 +45,7 @@ toc:
           - file: connectors-kibana/index-action-type.md
           - file: connectors-kibana/obs-ai-assistant-action-type.md
           - file: connectors-kibana/server-log-action-type.md
+          - file: connectors-kibana/microsoft-teams-action-type.md
       - file: connectors-kibana/alerting-cases-connectors.md
         children:
           - file: connectors-kibana/crowdstrike-action-type.md
