--- a/src/platform/plugins/shared/dashboard/tsconfig.json
+++ b/src/platform/plugins/shared/dashboard/tsconfig.json
@@ -9,7 +9,7 @@
     "common/**/*",
     "public/**/*",
     "server/**/*",
-    "test/scout/**/*"
+    "test/scout/**/*",
     "test/scout_oas_schema/**/*",
     "test/scout_oas_schema/**/*.json"
   ],
