added data_views in scout ci config

--- a/.buildkite/scout_ci_config.yml
+++ b/.buildkite/scout_ci_config.yml
@@ -4,6 +4,7 @@ plugins:
     - apm
     - console
     - cloud_security_posture
+    - data_views
     - discover_enhanced
     - entity_store
     - fleet
