Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/streams_app/tsconfig.json
+++ b/x-pack/platform/plugins/shared/streams_app/tsconfig.json
@@ -108,5 +108,6 @@
     "@kbn/inference-common",
     "@kbn/inference-endpoint-ui-common",
     "@kbn/stack-connectors-plugin",
+    "@kbn/esql-language",
   ]
 }
