Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/streams_app/moon.yml
+++ b/x-pack/platform/plugins/shared/streams_app/moon.yml
@@ -109,6 +109,7 @@ dependsOn:
   - '@kbn/inference-common'
   - '@kbn/inference-endpoint-ui-common'
   - '@kbn/stack-connectors-plugin'
+  - '@kbn/esql-language'
 tags:
   - plugin
   - prod
