--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -313,6 +313,9 @@
       "groupingKey": {
         "type": "keyword"
       },
+      "kind": {
+        "type": "keyword"
+      },
       "lookbackWindow": {
         "type": "keyword"
       },
