--- a/package.json
+++ b/package.json
@@ -2125,6 +2125,5 @@
     "yargs": "15.4.1",
     "yarn-deduplicate": "6.0.2"
   },
-  "packageManager": "yarn@1.22.21",
-  "tomatpo": "potato"
+  "packageManager": "yarn@1.22.21"
 }
