[Scout] Initialize Peggy require hook for `.peggy` grammar files

--- a/src/platform/packages/shared/kbn-scout/moon.yml
+++ b/src/platform/packages/shared/kbn-scout/moon.yml
@@ -37,6 +37,7 @@ dependsOn:
   - '@kbn/streams-schema'
   - '@kbn/streamlang'
   - '@kbn/axe-config'
+  - '@kbn/peggy'
   - '@kbn/apm-synthtrace'
   - '@kbn/apm-synthtrace-client'
 tags:
