--- a/src/platform/packages/shared/kbn-scout/tsconfig.json
+++ b/src/platform/packages/shared/kbn-scout/tsconfig.json
@@ -33,6 +33,7 @@
     "@kbn/streams-schema",
     "@kbn/streamlang",
     "@kbn/axe-config",
+    "@kbn/peggy",
     "@kbn/apm-synthtrace",
     "@kbn/apm-synthtrace-client"
   ]
