Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/security/plugins/entity_store/tsconfig.json
+++ b/x-pack/solutions/security/plugins/entity_store/tsconfig.json
@@ -35,5 +35,6 @@
     "@kbn/encrypted-saved-objects-plugin",
     "@kbn/scout-security",
     "@kbn/core-saved-objects-server",
+    "@kbn/es-query",
   ]
 }
