test(integration): add integration test for discoverMessagePatterns

--- a/x-pack/platform/plugins/shared/streams/tsconfig.json
+++ b/x-pack/platform/plugins/shared/streams/tsconfig.json
@@ -76,5 +76,7 @@
     "@kbn/alerting-types",
     "@kbn/core-http-common",
     "@kbn/scout",
+    "@kbn/core-lifecycle-server-internal",
+    "@kbn/core-test-helpers-kbn-server",
   ]
 }
