--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "**/typescript": "5.9.3",
     "**/util": "0.12.5",
     "**/yauzl": "3.2.0",
-    "**/zod": "3.25.76",
     "@aws-sdk/client-bedrock-agent-runtime": "3.883.0",
     "@aws-sdk/client-bedrock-runtime": "3.883.0",
     "@aws-sdk/client-kendra": "3.879.0",
@@ -1504,8 +1503,7 @@
     "yaml": "2.8.1",
     "yauzl": "3.2.0",
     "yazl": "3.3.1",
-    "zod": "3.25.76",
-    "zod-to-json-schema": "3.25.0"
+    "zod": "4.3.6"
   },
   "devDependencies": {
     "@apidevtools/swagger-parser": "12.1.0",
