Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -50,7 +50,8 @@
     "@kbn/core-saved-objects-api-server-mocks",
     "@kbn/core-user-profile-common",
     "@kbn/core-user-profile-server-mocks",
-    "@kbn/core-user-profile-server"
+    "@kbn/core-user-profile-server",
+    "@kbn/core-security-common"
   ],
   "exclude": ["target/**/*"]
 }
