Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/observability/plugins/observability_agent_builder/moon.yml
+++ b/x-pack/solutions/observability/plugins/observability_agent_builder/moon.yml
@@ -59,6 +59,7 @@ dependsOn:
   - '@kbn/kibana-utils-plugin'
   - '@kbn/server-route-repository-client'
   - '@kbn/apm-types'
+  - '@kbn/slo-schema'
 tags:
   - plugin
   - prod
