chore(NA): use n4d machines

--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -54,8 +54,8 @@ steps:
     label: 'Checks'
     key: checks
     agents:
-      machineType: n2d-standard-2
-      diskType: pd-ssd
+      machineType: n4d-standard-2
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
@@ -68,8 +68,8 @@ steps:
   - command: .buildkite/scripts/steps/lint.sh
     label: 'Linting'
     agents:
-      machineType: n2d-standard-16
-      diskType: pd-ssd
+      machineType: n4d-standard-16
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
@@ -83,8 +83,8 @@ steps:
   - command: .buildkite/scripts/steps/lint_with_types.sh
     label: 'Linting (with types)'
     agents:
-      machineType: n2d-standard-32
-      diskType: pd-ssd
+      machineType: n4d-standard-32
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: us-central1-c,us-central1-a
       diskSizeGb: 105
