--- a/.buildkite/pipelines/on_merge.yml
+++ b/.buildkite/pipelines/on_merge.yml
@@ -70,7 +70,8 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: n2-standard-2
+      machineType: n4d-standard-2
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
@@ -86,7 +87,8 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: n2-standard-16
+      machineType: n4d-standard-16
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
@@ -102,7 +104,8 @@ steps:
       image: family/kibana-ubuntu-2404
       imageProject: elastic-images-prod
       provider: gcp
-      machineType: n2-standard-32
+      machineType: n4d-standard-32
+      diskType: hyperdisk-balanced
       preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
