[Security Solution] Migrate AI Assistant tests to Scout with serverless support
- Add Scout/Playwright tests for AI Assistant (conversations, prompts, messages)
- Add @svlSecurity tags for serverless Security Complete mode
- Enable feature_complete.spec.ts for serverless validation
- Update Buildkite script to run both --stateful and --serverless=security
- Add dedicated pipeline step with 120min timeout for dual-mode execution
- Exclude ai_assistant config from auto-discovery (has its own pipeline)

--- a/.buildkite/scout_ci_config.yml
+++ b/.buildkite/scout_ci_config.yml
@@ -39,3 +39,4 @@ packages:
 # Define test configs to be excluded from automatic discovery & execution in CI environment (process.env.CI=true)
 excluded_configs:
   - x-pack/solutions/security/plugins/cloud_security_posture/test/scout_cspm_agentless/ui/parallel.playwright.config.ts
+  - x-pack/solutions/security/plugins/security_solution/test/scout/ui/ai_assistant.playwright.config.ts
