--- a/docs/changelog/237877.yaml
+++ b/docs/changelog/237877.yaml
@@ -88,5 +88,5 @@ products:
   target: 9.3.0
 areas:
 - Search
-title: '[Accessibility] Announce changes when resetting terms in synonyms panel'
+title: Announce changes when resetting terms in synonyms panel
 description: Fixes an accessibility issue where resetting changes or removing all terms in the Synonyms panel was not announced by screen readers. VoiceOver users on Safari will now hear updates when terms are reset.
