--- a/docs/changelog/237972.yaml
+++ b/docs/changelog/237972.yaml
@@ -89,4 +89,4 @@ products:
 areas:
 - Kibana platform
 - Machine learning
-title: '[Log rate analysis] Adds unique accessible labels for Show top field values buttons'
+title: Adds unique accessible labels for Show top field values buttons
