--- a/docs/changelog/242441.yaml
+++ b/docs/changelog/242441.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Endpoint][ResponseActions] Show user readable output for MDE runscript response action'
+title: Show user readable output for MDE runscript response action
