--- a/docs/changelog/242487.yaml
+++ b/docs/changelog/242487.yaml
@@ -88,5 +88,5 @@ products:
   target: 9.3.0
 areas:
 - Search
-title: '[Dev Console Improvements] Export as x language'
+title: Export as x language
 description: Improves the Console UI to make key actions more intuitive. The Play button is now more prominent, a new "Copy to language" button provides quick access to export the selected command in the user's preferred coding language, and the context menu has been updated to allow users to set a default language preference. These enhancements improve the discoverability of both query execution and export.
