--- a/docs/changelog/242922.yaml
+++ b/docs/changelog/242922.yaml
@@ -90,5 +90,5 @@ products:
   target: 9.3.0
 areas:
 - Alerting
-title: '[Reporting] Add email cc, bcc, subject and message fields to scheduled reports email'
+title: Add email cc, bcc, subject and message fields to scheduled reports email
 description: 'Adds new fields to the schedule export form email notification section:  cc and bcc recipients, subject and message with Mustache templating support'
