--- a/docs/changelog/237911.yaml
+++ b/docs/changelog/237911.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Alerts] Fix grouping in alerts table'
+title: Fix grouping in alerts table
