--- a/docs/changelog/238200.yaml
+++ b/docs/changelog/238200.yaml
@@ -92,4 +92,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Observability solution
-title: '[ES|QL] Add 10s request timeout to ES|QL query execution'
+title: Add 10s request timeout to ES|QL query execution
