--- a/docs/changelog/238679.yaml
+++ b/docs/changelog/238679.yaml
@@ -92,4 +92,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Automatic migrations][Bug] Can not change migration when translating rules (#233640)'
+title: Can not change migration when translating rules (#233640)
