--- a/docs/changelog/239366.yaml
+++ b/docs/changelog/239366.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[a11y] Remove `autoFocus` to preserve proper focus when modal closed'
+title: Remove `autoFocus` to preserve proper focus when modal closed
