--- a/docs/changelog/239400.yaml
+++ b/docs/changelog/239400.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[A11Y] Add missing aria-label to BetaBadge component'
+title: Add missing aria-label to BetaBadge component
