--- a/docs/changelog/239504.yaml
+++ b/docs/changelog/239504.yaml
@@ -90,4 +90,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: "[a11y] Add manual focus to action buttons' actions"
+title: Add manual focus to action buttons' actions
