--- a/docs/changelog/239748.yaml
+++ b/docs/changelog/239748.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Bug] The schedule can not be created with the case as the connector type (#238587)'
+title: The schedule can not be created with the case as the connector type (#238587)
