--- a/docs/changelog/241022.yaml
+++ b/docs/changelog/241022.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Detection Engine] Fix threshold rule logic with no group by fields defined'
+title: Fix threshold rule logic with no group by fields defined
