--- a/docs/changelog/241047.yaml
+++ b/docs/changelog/241047.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Simplify metrics profile resolution by removing index pattern and time series validation'
+title: Simplify metrics profile resolution by removing index pattern and time series validation
