--- a/docs/changelog/241108.yaml
+++ b/docs/changelog/241108.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Intelligence] Table Pagination Not Working as Expected'
+title: Table Pagination Not Working as Expected
