--- a/docs/changelog/241164.yaml
+++ b/docs/changelog/241164.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Overview]  Fix: custom links clears filter values when new field is selected or deleted'
+title: 'Fix: custom links clears filter values when new field is selected or deleted'
