--- a/docs/changelog/241195.yaml
+++ b/docs/changelog/241195.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Update Metrics Experience routes to delegate authorization to Elasticsearch'
+title: Update Metrics Experience routes to delegate authorization to Elasticsearch
