--- a/docs/changelog/241369.yaml
+++ b/docs/changelog/241369.yaml
@@ -92,4 +92,4 @@ products:
   target: 9.3.0
 areas:
 - Management
-title: '[Streamlang] Add timezone and locale parameters to Streamlang'
+title: Add timezone and locale parameters to Streamlang
