--- a/docs/changelog/241662.yaml
+++ b/docs/changelog/241662.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Escape special characters when creating ESQL query for Lens charts'
+title: Escape special characters when creating ESQL query for Lens charts
