--- a/docs/changelog/242171.yaml
+++ b/docs/changelog/242171.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Entity Analytics][Risk Score] Changing `must_not` filter to `must` for risk scoring filter'
+title: Changing `must_not` filter to `must` for risk scoring filter
