--- a/docs/changelog/242673.yaml
+++ b/docs/changelog/242673.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Hosts] Charts not filtering by host.name fix'
+title: Charts not filtering by host.name fix
