--- a/docs/changelog/243387.yaml
+++ b/docs/changelog/243387.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Endpoint] Fix response actions API (for Elastic Defend agent types) not sending action to more than 10 agents'
+title: Fix response actions API (for Elastic Defend agent types) not sending action to more than 10 agents
