--- a/docs/changelog/243543.yaml
+++ b/docs/changelog/243543.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Alert details] save selected prevalence time to local storage'
+title: save selected prevalence time to local storage
