--- a/docs/changelog/244012.yaml
+++ b/docs/changelog/244012.yaml
@@ -86,4 +86,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Connector] Improve IBM error message'
+title: Improve IBM error message
