--- a/docs/changelog/244481.yaml
+++ b/docs/changelog/244481.yaml
@@ -88,4 +88,4 @@ type: enhancement
 products:
 - product: kibana
   target: 9.3.0
-title: '[Infra] Ensure Infra Inventory UIs reflect supported schemas'
+title: Ensure Infra Inventory UIs reflect supported schemas
