--- a/docs/changelog/245857.yaml
+++ b/docs/changelog/245857.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Alert details] show analyzer in full height'
+title: show analyzer in full height
