--- a/docs/changelog/246510.yaml
+++ b/docs/changelog/246510.yaml
@@ -86,4 +86,4 @@ type: enhancement
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Add badge sync to unified trace waterfall'
+title: Add badge sync to unified trace waterfall
