--- a/docs/changelog/246978.yaml
+++ b/docs/changelog/246978.yaml
@@ -92,4 +92,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Privmon] Prepare Monitoring Entity Source CRUD APIs for GA'
+title: Prepare Monitoring Entity Source CRUD APIs for GA
