--- a/docs/changelog/247052.yaml
+++ b/docs/changelog/247052.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Traces] Error rate chart warning on first load'
+title: Error rate chart warning on first load
