--- a/docs/changelog/247060.yaml
+++ b/docs/changelog/247060.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Entity Analytics][Risk Scoring] Handle special characters in ESQL query for risk scoring'
+title: Handle special characters in ESQL query for risk scoring
