--- a/docs/changelog/247252.yaml
+++ b/docs/changelog/247252.yaml
@@ -86,4 +86,4 @@ type: enhancement
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Minor cleanup in trace waterfall tests'
+title: Minor cleanup in trace waterfall tests
