--- a/docs/changelog/247531.yaml
+++ b/docs/changelog/247531.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Discover] Fix trace links calculating date range incorrectly'
+title: Fix trace links calculating date range incorrectly
