--- a/docs/changelog/247689.yaml
+++ b/docs/changelog/247689.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Observability solution
-title: '[Discover] Fix missing spans in trace in discover'
+title: Fix missing spans in trace in discover
