--- a/docs/changelog/247695.yaml
+++ b/docs/changelog/247695.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Detection Engine] fixes "Tooltip info for status tags not displayed on Gap fill scheduler logs flyout"'
+title: fixes "Tooltip info for status tags not displayed on Gap fill scheduler logs flyout"
