--- a/docs/changelog/247721.yaml
+++ b/docs/changelog/247721.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: "[Data Table] Fix link's color contrast"
+title: Fix link's color contrast
