--- a/docs/changelog/248221.yaml
+++ b/docs/changelog/248221.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Entity Analytics] Disable rule summary button when user lacks all rule privileges'
+title: Disable rule summary button when user lacks all rule privileges
