--- a/docs/changelog/249032.yaml
+++ b/docs/changelog/249032.yaml
@@ -90,4 +90,4 @@ products:
   target: 9.3.0
 areas:
 - Elastic Security solution
-title: '[Bug] Wrong Number Users Displayed CSV Bug'
+title: Wrong Number Users Displayed CSV Bug
