--- a/docs/changelog/249450.yaml
+++ b/docs/changelog/249450.yaml
@@ -86,4 +86,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[Lens] Replace custom header with lens highlight implementation'
+title: Replace custom header with lens highlight implementation
