--- a/docs/changelog/249716.yaml
+++ b/docs/changelog/249716.yaml
@@ -86,4 +86,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[SigEvents] Prevent editing feature of significant event queries'
+title: Prevent editing feature of significant event queries
