--- a/docs/changelog/249833.yaml
+++ b/docs/changelog/249833.yaml
@@ -86,4 +86,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[SigEvents] Fix query sync on save and add debounce for preview chart'
+title: Fix query sync on save and add debounce for preview chart
