--- a/docs/changelog/250047.yaml
+++ b/docs/changelog/250047.yaml
@@ -88,4 +88,4 @@ type: bug-fix
 products:
 - product: kibana
   target: 9.3.0
-title: '[ESQL] Fix filtering by multiline string fields'
+title: Fix filtering by multiline string fields
