--- a/package.json
+++ b/package.json
@@ -1168,6 +1168,7 @@
     "@kbn/uptime-plugin": "link:x-pack/solutions/observability/plugins/uptime",
     "@kbn/url-drilldown-plugin": "link:x-pack/platform/plugins/private/drilldowns/url_drilldown",
     "@kbn/url-forwarding-plugin": "link:src/platform/plugins/private/url_forwarding",
+    "@kbn/usage-api-plugin": "link:x-pack/platform/plugins/shared/usage_api",
     "@kbn/usage-collection-plugin": "link:src/platform/plugins/shared/usage_collection",
     "@kbn/usage-collection-test-plugin": "link:src/platform/test/plugin_functional/plugins/usage_collection",
     "@kbn/use-observable": "link:src/platform/packages/shared/react/use_observable",
