Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/packages/shared/kbn-streamlang/tsconfig.json
+++ b/x-pack/platform/packages/shared/kbn-streamlang/tsconfig.json
@@ -21,6 +21,7 @@
     "@kbn/datemath",
     "@kbn/esql-language",
     "@kbn/tinymath",
-    "@kbn/grok-ui"
+    "@kbn/grok-ui",
+    "@kbn/utility-types"
   ]
 }
