--- a/x-pack/platform/packages/shared/kbn-streamlang/moon.yml
+++ b/x-pack/platform/packages/shared/kbn-streamlang/moon.yml
@@ -26,6 +26,7 @@ dependsOn:
   - '@kbn/esql-language'
   - '@kbn/tinymath'
   - '@kbn/grok-ui'
+  - '@kbn/utility-types'
 tags:
   - shared-common
   - package
